# vitrium

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
resources/: Vitrium.icns
src/: AutoHideBar.cpp  AutoHideBar.h  Editor.cpp  Editor.h  FileWorker.cpp  FileWorker.h  FindBar.cpp  FindBar.h  Highlighter.cpp  Highlighter.h  MacVibrancy.h  MacVibrancy.mm  MainWindow.cpp  MainWindow.h  TabBar.cpp  TabBar.h  Theme.h  main.cpp
